--- a/header/header.css
+++ b/header/header.css
@@ -16,3 +16,25 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+a {
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 0 2rem;
+    background-color: #EEEEEE;
+    padding: 2px 6px 2px 6px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    width: fit-content;
+    min-width: 120px;
+    border-radius: 10px;
+}
+
+a, a:hover, a:visited, a:active {
+    color: inherit;
+    text-decoration: none;
+}
