--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -8,7 +8,7 @@
         <script type="text/javascript" src="/js/get-specific-card-info.js"></script>
     </HEAD>
 
-    <BODY>
+    <BODY onload="getCardName()">
         <div id="page-container">   
             <iframe scrolling=no src="/header/index.html" id="header"></iframe>
             <div id="content-wrap">
