--- a/header/header.css
+++ b/header/header.css
@@ -38,3 +38,24 @@ a, a:hover, a:visited, a:active {
     color: inherit;
     text-decoration: none;
 }
+
+#search {
+    display: inline-block;
+    width: 200px;
+    max-width: 50%;
+    height: 100%;
+}
+
+#searchBar {
+    width: 80%;
+    margin: auto;
+}
+
+#submitButton {
+    cursor: pointer;
+    background: blue;
+}
+
+#submitButton:hover {
+    background: lightblue;
+}
