--- a/header/header.css
+++ b/header/header.css
@@ -48,7 +48,7 @@ a, a:hover, a:visited, a:active {
 
 #searchBar {
     display: inline;
-    width: 80%;
+    width: 70%;
     margin: auto;
 }
 
@@ -65,5 +65,6 @@ a, a:hover, a:visited, a:active {
 }
 
 #searchIcon {
-    object-fit: contain;
+    max-width: 100%;
+    height: auto;
 }
