--- a/header/header.css
+++ b/header/header.css
@@ -1,6 +1,6 @@
 nav {
     display: block;
-    text-align: center;
+    text-align: right;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -55,9 +55,9 @@ a, a:hover, a:visited, a:active {
 #submitButton {
     display: inline;
     cursor: pointer;
-    background: blue;
-    width: 20%;
-    padding-top: 100%;
+    background: skyblue;
+    width: 1.4rem;
+    height: 1.4rem;
 }
 
 #submitButton:hover {
