--- a/header/header.css
+++ b/header/header.css
@@ -1,6 +1,7 @@
 nav {
     display: block;
     text-align: right;
+    float: left;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -19,6 +20,7 @@ html, body {
 
 a {
     display: inline-block;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
