--- a/header/header.css
+++ b/header/header.css
@@ -1,7 +1,6 @@
 nav {
     display: block;
     text-align: right;
-    float: left;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -15,16 +14,16 @@ html, body {
     padding: 0px;
     border: none;
     width: 100%;
-    height: 100%;
+    height: 2.5rem;
 }
 
 a {
     display: inline-block;
+    vertical-align: middle;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
-    margin: 0 2rem;
     background-color: #EEEEEE;
     padding: 2px 6px 2px 6px;
     border-top: 1px solid #CCCCCC;
