--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,6 +1,6 @@
 nav {
     display: block;
-    text-align: center;
+    text-align: left;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -10,31 +10,26 @@ nav {
 
 html, body {
     display: block;
-    margin: none;
-    padding: none;
+    margin: 0px;
+    padding: 0px;
     border: none;
     width: 100%;
-    height: 100%;
+    height: 2.5rem;
 }
 
 a {
     display: inline-block;
+    vertical-align: middle;
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
-    margin: 0 2rem;
-    background-color: #EEEEEE;
-    padding: 2px 6px 2px 6px;
-    border-top: 1px solid #CCCCCC;
-    border-right: 1px solid #333333;
-    border-bottom: 1px solid #333333;
-    border-left: 1px solid #CCCCCC;
+    margin: 0.5rem 0.9rem;
     width: fit-content;
     min-width: 120px;
-    border-radius: 10px;
 }
 
 a, a:hover, a:visited, a:active {
-    color: inherit;
+    color: aquamarine;
     text-decoration: none;
 }
