--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #header {
-    background-color: rgb(126, 126, 126);
-    width: 100%;
+    background-color: rgb(61, 61, 61);
+    width: 80%;
     height: 2.5rem;
     position: fixed;
     margin: 0;
@@ -10,7 +10,7 @@
 }
 
 #footer {
-    background-color: rgb(126, 126, 126);
+    background-color: rgb(61, 61, 61);
     width: 100%;
     position: absolute;
     display: block;
@@ -34,16 +34,25 @@
     display: block;
     margin: 0;
     border: none;
-    padding-bottom: 2.5rem;
-    padding-top: 2.5rem;
+    padding: 2.5rem 1.0rem;
 }
 
-html, body {
+html {
     width: 100%;
     height: 100%;
     margin: 0;
     border: none;
     padding: 0;
+    background-image: url('/portrait.jpg');
+}
+
+body {
+    width: 80%;
+    display: block;
+    margin: 0 10%;
+    border: none;
+    background-color: rgb(23, 34, 54);
+    color: white;
 }
 
 #result {
