use javascript instead of iframes for header and footer, add smaller screen support

--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -10,14 +10,14 @@
 
     <BODY onload="getCardName()">
         <div id="page-container">   
-            <iframe scrolling=no src="/header/index.html" id="header"></iframe>
+            <script type="text/javascript" src="/js/make-header.js"></script>
             <div id="content-wrap">
 
                 <H1>Card View</H1>
                 <P>This card will query the server for a specific card and display extra info, such as what art others may have already submitted.</P>
                 <P id="result">This is a placeholder and javascript should replace this with an interpretation of the query string.</P>
             </div>
-            <iframe scrolling=no src="/footer/index.html" id="footer"></iframe>
+            <script type="text/javascript" src="/js/make-footer.js"></script>
         </div>
     </BODY>
 
