--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -3,6 +3,9 @@
 <HTML>
 
     <HEAD>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
+
         <TITLE>Card View</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/get-specific-card-info.js"></script>
