--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -6,7 +6,7 @@
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
         <meta content="utf-8" http-equiv="encoding">
 
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/js/check-login.js"></script>
         <script type="text/javascript">onLoadPage();</script>
         <TITLE>Card View</TITLE>
         <link href='/style.css' rel='stylesheet'>
@@ -22,7 +22,7 @@
                 <P>This card will query the server for a specific card and display extra info, such as what art others may have already submitted.</P>
                 <P id="result">This is a placeholder and javascript should replace this with an interpretation of the query string.</P>
             </div>
-            <script type="text/javascript" src="/js/footer.js"></script>
+            <nav id="footer"></nav>
         </div>
     </BODY>
 
