--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     display: block;
     text-align: right;
+    z-index: 1;
 }
 
 #footer {
@@ -114,6 +115,12 @@ body {
 
 #result {
     color: red;
+}
+
+#cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
