--- a/style.css
+++ b/style.css
@@ -204,6 +204,10 @@ body {
     color: green;
 }
 
+.mana-symbol {
+    height: 1rem;
+}
+
 @media only screen and (max-width: 850px) {
     #header, #footer {
         height: 1.5rem;
