start up "single card view" interface

--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -17,6 +17,7 @@
         <div id="page-container">
             <nav id="header"></nav>
             <div id="content-wrap">
+                <div id="cards-container"></div>
 
                 <H1>upload form</H1>
                 <form action="">
@@ -24,8 +25,6 @@
                     <input id="cardID" name="cardID" type="text">
                     <input type="button" name="submitbutton" value="submit" onclick="uploadArt(this.form);">
                 </form>
-
-                <img id="reflect" src="">
             </div>
             <nav id="footer"></nav>
         </div>
