--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding: 0;
     display: block;
     text-align: right;
-    z-index: 1;
+    z-index: 1000;
 }
 
 #footer {
@@ -118,39 +118,50 @@ body {
 }
 
 #cards-container {
-    --size-multiplier: 0.4;
+    --base-size: 0.4;
+    --size-multiplier: var(--base-size);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
 .card {
+    --size: var(--size-multiplier);
     position: relative;
     font-family: 'Kreon', serif;
-    width: calc(675px * var(--size-multiplier));
-    height: calc(950px * var(--size-multiplier));
-    font-size: calc(100% * var(--size-multiplier));
+    width: calc(675px * var(--size));
+    height: calc(950px * var(--size));
+    font-size: calc(100% * var(--size));
 }
 
 .card-preview {
-    --size-multiplier: calc(0.5 * var(--size-multiplier));
+    --size: calc(0.5 * var(--size-multiplier));
     position: relative;
     font-family: 'Kreon', serif;
-    width: calc(675px * var(--size-multiplier));
-    height: calc(950px * var(--size-multiplier));
-    font-size: calc(100% * var(--size-multiplier));
+    width: calc(675px * var(--size));
+    height: calc(950px * var(--size));
+    font-size: calc(100% * var(--size));
+}
+
+.card-link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
 }
 
 .card-portrait, .card-description-background, .card-frame, .card-banner, .card-energy-symbol {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 .card-art {
     position: absolute;
-    width: calc(500px * var(--size-multiplier));
-    height: calc(380px * var(--size-multiplier));
+    z-index: 1;
+    width: calc(500px * var(--size));
+    height: calc(380px * var(--size));
     left: calc(100% * calc(calc(calc(675 - 500) / 2) / 675));               /*half the extra width between image size and parent container*/
     top: calc(100% * calc(calc(calc(calc(950 - 380) / 2) - 133) / 950));    /*half the extra height between image size and parent container, minus 133 pixels*/
 }
@@ -161,6 +172,7 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
+    z-index: 3
 }
 
 .card-description-container {
