--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ body {
 #cards-container {
     --base-size: 0.4;
     --size-multiplier: var(--base-size);
+    --base-z: 5;
+    --z-modifier: var(--base-z);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -135,31 +137,39 @@ body {
 }
 
 .card-preview {
-    --size: calc(0.5 * var(--size-multiplier));
-    position: relative;
+    --preview-size: 0.7;
+    --size: calc(var(--preview-size) * var(--size-multiplier));
+    position: absolute;
+    left: calc(-100% * var(--preview-size));
+    display: none;
+    --z-modifier: calc(100 + var(--base-z));
     font-family: 'Kreon', serif;
     width: calc(675px * var(--size));
     height: calc(950px * var(--size));
-    font-size: calc(100% * var(--size));
+    font-size: calc(100% * var(--preview-size));
+}
+
+.card:hover .card-preview {
+    display: block;
 }
 
 .card-link {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 4;
+    z-index: calc(4 + var(--z-modifier));
 }
 
 .card-portrait, .card-description-background, .card-frame, .card-banner, .card-energy-symbol {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: calc(2 + var(--z-modifier));
 }
 
 .card-art {
     position: absolute;
-    z-index: 1;
+    z-index: calc(1 + var(--z-modifier));
     width: calc(500px * var(--size));
     height: calc(380px * var(--size));
     left: calc(100% * calc(calc(calc(675 - 500) / 2) / 675));               /*half the extra width between image size and parent container*/
@@ -172,7 +182,7 @@ body {
     text-align: center;
     justify-content: center;
     align-items: center;
-    z-index: 3
+    z-index: calc(3 + var(--z-modifier));
 }
 
 .card-description-container {
@@ -234,7 +244,7 @@ body {
 }
 
 .mana-symbol {
-    height: 1rem;
+    height: 1em;
 }
 
 @media only screen and (max-width: 850px) {
