--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -12,6 +12,8 @@
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/upload-art.js"></script>
         <script type="text/javascript" src="/js/get-cards.js"></script>
+
+        <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
     <BODY onload="getSingleCard()">
