--- a/style.css
+++ b/style.css
@@ -126,11 +126,21 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    min-height: fit-content;
+}
+
+.card-wrapper {
+    width: calc(675px * var(--size-multiplier));
+    height: calc(950px * var(--size-multiplier));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
 }
 
 .card {
     --size: var(--size-multiplier);
-    position: relative;
+    position: absolute;
     font-family: 'Kreon', serif;
     width: calc(675px * var(--size));
     height: calc(950px * var(--size));
@@ -151,7 +161,12 @@ body {
     font-size: calc(100% * var(--preview-size));
 }
 
-.card:hover .card-preview {
+.card-wrapper .card:hover {
+    --size-multiplier: calc(1.2 * var(--base-size));
+    --z-modifier: 100;
+}
+
+.card-wrapper .card:hover .card-preview {
     display: block;
 }
 
@@ -164,8 +179,8 @@ body {
 
 .card-portrait, .card-description-background, .card-frame, .card-banner, .card-energy-symbol {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: calc(675px * var(--size));
+    height: calc(950px * var(--size));
     z-index: calc(2 + var(--z-modifier));
 }
 
@@ -215,7 +230,7 @@ body {
     width: 70%;
     height: 7.3%;
     left: 15.3%;
-    top: 12.4%;
+    top: 10.1%;
 }
 
 .card-name-text {
@@ -228,7 +243,7 @@ body {
     width: 14.8%;
     height: 10.5%;
     left: 2.5%;
-    top: 6.8%;
+    top: 6%;
 }
 
 .card-cost-text {
