set up the ability to add buttons to the top left of the header

--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -18,7 +18,7 @@
 
     <BODY onload="getSingleCard()">
         <div id="page-container">
-            <nav id="header"></nav>
+            <div id="header"><div id="context-buttons"></div><nav id="nav-bar"></nav></div>
             <div id="content-wrap">
                 <div id="cards-container"></div>
 
