fix an issue with single card view introduced by changes to cards view

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ body {
     min-height: fit-content;
 }
 
-.card-wrapper {
+.card-wrapper, .single-card-wrapper {
     width: calc(675px * var(--size-multiplier));
     height: calc(950px * var(--size-multiplier));
     display: flex;
