add a loading icon, fix the content sometimes loading sooner than the header exists, crashing the javascript

--- a/cards/view/index.html
+++ b/cards/view/index.html
@@ -7,9 +7,8 @@
         <meta content="utf-8" http-equiv="encoding">
 
         <script type="text/javascript" src="/js/check-login.js"></script>
-        <script type="text/javascript">onLoadPage();</script>
         <script type="text/javascript" src="/js/toggle-upgrades.js"></script>
-        
+
         <TITLE>View Card</TITLE>
         <link href='/style.css' rel='stylesheet'>
         <script type="text/javascript" src="/js/upload-art.js"></script>
@@ -18,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kreon&display=swap" rel="stylesheet"> 
     </HEAD>
 
-    <BODY onload="getSingleCard()">
+    <BODY onload="onLoadPage();getSingleCard();">
         <div id="page-container">
             <div id="header"><div id="context-buttons"><img src="/favicon.ico" id="fox"></div><nav id="nav-bar"></nav></div>
             <script type="text/javascript">makeButton();</script>
