--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     margin: 0;
     border: none;
     padding: 0;
-    display: block;
     z-index: 1000;
     display: flex;
     justify-content: space-between;
@@ -29,13 +28,14 @@
     background-color: rgb(61, 61, 61);
     width: 100%;
     position: absolute;
-    display: block;
+    display: flex;
     bottom: 0;
     height: 2.5rem;
     margin: 0;
     border: none;
     padding: 0;
-    text-align: left;
+    justify-content: left;
+    align-items: center;
 }
 
 #page-container {
@@ -73,20 +73,70 @@ body {
     color: white;
 }
 
-.navigation, #toggle-upgrades {
+.nav-bar {
+    display: flex;
+    align-items: center;
+}
+
+.nav-button {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: none;
+}
+
+.navigation, #toggle-upgrades, .nav-button {
+    position: relative;
     display: inline-block;
-    vertical-align: middle;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
     font-weight: bold;
-    margin: 0.5rem 0.9rem;
+    padding: 0 0.9rem;
     width: fit-content;
+    margin: auto 0;
+    height: 100%;
 }
 
-.navigation, .navigation:hover, .navigation:visited, .navigation:active, #toggle-upgrades-label {
+a.navigation {
+    display: flex;
+    align-items: center;
+}
+
+.navigation, .navigation:hover, .navigation:visited, .navigation:active, #toggle-upgrades-label, .nav-button {
     color: aquamarine;
     text-decoration: none;
+}
+
+.navigation:hover {
+    background-color: rgb(77, 77, 77);
+}
+
+.nav-dropdown {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: rgb(61, 61, 61);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.nav-dropdown a {
+    color: aquamarine;
+    padding: 0.8em;
+    text-decoration: none;
+    display: block;
+}
+
+.nav-dropdown a:hover {
+    background-color: rgb(77, 77, 77);
+}
+
+.navigation:hover .nav-dropdown {
+    display: block;
 }
 
 #search {
