--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ a.navigation {
     align-items: center;
 }
 
+.single-card-wrapper {
+    padding: 50px;
+}
+
 .card {
     --size: var(--size-multiplier);
     position: absolute;
@@ -515,6 +519,66 @@ a.navigation {
 
 #artist-table tbody tr:last-of-type {
     border-bottom: 2px solid #009879;
+}
+
+#credits-info {
+    position: absolute;
+    left: 50%;
+    z-index: 10;
+    top: -10%;
+    min-width: 320px;
+    width: max-content;
+    height: 64px;
+    transform: translateX(-50%);
+}
+
+#show-next-art, #show-previous-art {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    top: 50%;
+    background: url('/arrow.png');
+    background-size: 200%;
+    background-position: center;
+    border: none;
+}
+
+#show-next-art:hover, #show-previous-art:hover {
+    filter: brightness(150%);
+    cursor: pointer;
+}
+
+#show-previous-art {
+    left: -10%;
+    transform: translateY(-50%);
+}
+
+#show-next-art {
+    right: -10%;
+    transform: translateY(-50%) scaleX(-1);
+}
+
+#credits-info-img-bot, #credits-info-img-top {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 50%;
+}
+
+#credits-info-img-bot {
+    bottom: 0;
+}
+
+#credits-info-name-container, #credits-info-url {
+    text-align: center;
+    position: relative;
+    padding: 0 14px;
+    padding-top: 7px;
+    font-size: 200%;
+}
+
+#credits-info-name {
+    color: green;
 }
 
 .lds-spinner {
