--- a/style.css
+++ b/style.css
@@ -143,6 +143,9 @@ a.navigation {
 #search {
     width: 200px;
     max-width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #searchBar {
@@ -740,15 +743,11 @@ a.navigation {
 
     #searchBar {
         font-size: 0.5rem;
-        position: relative;
-        bottom: 0.15rem;
     }
 
     #submitButton {
         width: 1rem;
         height: 1rem;
-        position: relative;
-        top: 0.14rem;
     }
 
     #searchIcon {
