--- a/style.css
+++ b/style.css
@@ -745,24 +745,85 @@ a.navigation {
         font-size: 0.5rem;
     }
 
-    #submitButton {
-        width: 1rem;
-        height: 1rem;
-    }
-
-    #searchIcon {
-        position: relative;
-        bottom: 0.37rem;
-    }
-    
-    #fox {
-        left: 0.3rem;
-        top: 0.25rem;
+    #submitButton, #fox {
         width: 1rem;
         height: 1rem;
     }
     
     #content-wrap {
         padding: 1.5rem 1.0rem;
+    }
+}
+
+@media only screen and (max-width: 975px) {
+    #cards-container {
+        --base-size: 0.25;
+    }
+}
+
+@media only screen and (max-width: 775px) {
+    #cards-container {
+        --base-size: 0.225;
+    }
+
+    .navigation, #toggle-upgrades, .nav-button {
+        padding: 0 0.4rem;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    body, #header {
+        width: 100%;
+        margin: 0;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    #cards-container {
+        --base-size: 0.2;
+    }
+}
+
+@media only screen and (max-width: 530px) {
+    #header, #footer {
+        height: 1.15rem;
+    }
+    
+    .navigation, #toggle-upgrades, .nav-button {
+        font-size: 0.5rem;
+    }
+
+    #toggle-upgrades-button {
+        width: 15px;
+        height: 15px;
+    }
+    
+    #search {
+        width: 115px;
+    }
+
+    #searchBar {
+        font-size: 0.4rem;
+    }
+
+    #submitButton, #fox {
+        width: .75rem;
+        height: .75rem;
+    }
+    
+    #cards-container {
+        --base-size: 0.175;
+    }
+}
+
+@media only screen and (max-width: 465px) {
+    #cards-container {
+        --base-size: 0.13;
+    }
+}
+
+@media only screen and (max-width: 395px) {
+    .navigation, #toggle-upgrades, .nav-button {
+        padding: 0 0.1rem;
     }
 }
