--- a/style.css
+++ b/style.css
@@ -793,6 +793,10 @@ a.navigation {
     #cards-container {
         --base-size: 0.175;
     }
+
+    .card {
+        font-size: calc(130% * var(--size));
+    }
 }
 
 @media only screen and (max-width: 530px) {
@@ -829,7 +833,7 @@ a.navigation {
     }
 
     .card {
-        font-size: calc(130% * var(--size));
+        font-size: calc(150% * var(--size));
     }
 }
 
@@ -845,6 +849,6 @@ a.navigation {
     }
 
     .card {
-        font-size: calc(150% * var(--size));
+        font-size: calc(170% * var(--size));
     }
 }
