--- a/style.css
+++ b/style.css
@@ -87,6 +87,11 @@ body {
     background: none;
 }
 
+button.navigation {
+    border: none;
+    background: none;
+}
+
 .navigation, #toggle-upgrades, .nav-button {
     position: relative;
     display: inline-block;
@@ -192,6 +197,74 @@ a.navigation {
     background-position: center;
     width: 30px;
     height: 30px;
+}
+
+#login-tint {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10000;
+    background-color:rgb(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+}
+
+#login-prompt {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 10001;
+    width: 50%;
+    max-width: 250px;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(12, 104, 104);
+    border: rgb(98, 196, 163) 3px solid;
+    padding: 0 30px;
+    border-radius: 8px;
+    font-size: 130%;
+    color: white;
+}
+
+#login-prompt form {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+#login-prompt a {
+    display: block;
+}
+
+.input-row {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.input-row input {
+    width: 100%;
+    box-sizing: border-box;
+    height: 2rem;
+}
+
+#x-button {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: none;
+    border: none;
+    width: fit-content;
+    height: fit-content;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 #cards-container {
