--- a/style.css
+++ b/style.css
@@ -512,6 +512,7 @@ a.navigation {
     border: 2px solid rgb(98, 196, 163);
     background-color: rgb(12, 104, 104);
     border-radius: 10px;
+    position: relative;
 }
 
 .art-image {
@@ -812,7 +813,7 @@ a.navigation {
     height: calc(36px * var(--size));
 }
 
-#single-view-report-button img {
+#single-view-report-button img, .report-art-button img {
     width: 100%;
     height: 100%;
 }
@@ -830,6 +831,15 @@ a.navigation {
 
 #single-view-report-button:hover span {
     display: block;
+}
+
+.report-art-button {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    right: 0;
+    top: 0;
+    transform: translate(-50%, 50%);
 }
 
 .lds-spinner {
